# lssdp

./: CMakeLists.txt  README.md  lssdp-config.cmake.in  lssdp.c  lssdp.h
test/: CMakeLists.txt  daemon.c  network_interface.c  packet_listener.c
